dynamix/force-app/main/default/objects/Campaign/fields/Actual_Budget_Spent_Total_Spends__c.field-meta.xml
<CustomField>
    <fullName>Actual_Budget_Spent_Total_Spends__c</fullName>
    <label>Actual Budget Spent (Total Spends)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>