dynamix/force-app/main/default/objects/Campaign/fields/Approval_Status2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status2__c</fullName>
    <label>Approval Status2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved Again</fullName>
            </value>
            <value>
                <fullName>Rejected Again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>