dynamix/force-app/main/default/objects/Campaign/fields/Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Available_Budget__c</fullName>
    <formula>ActualCost -  Actual_Budget_Spent_Total_Spends__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>