dynamix/force-app/main/default/objects/Campaign/fields/CPB__c.field-meta.xml
<CustomField>
    <fullName>CPB__c</fullName>
    <formula>IF( Number_of_Bookings__c &lt;&gt; 0, ( Actual_Budget_Spent_Total_Spends__c / Number_of_Bookings__c),0)</formula>
    <label>CPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>