dynamix/force-app/main/default/objects/Campaign/fields/CPL__c.field-meta.xml
<CustomField>
    <fullName>CPL__c</fullName>
    <formula>IF( Total_Enquiries__c  &lt;&gt; 0, ( Actual_Budget_Spent_Total_Spends__c / Total_Enquiries__c) , 
     0)</formula>
    <label>CPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>