dynamix/force-app/main/default/objects/Campaign/fields/CPQL__c.field-meta.xml
<CustomField>
    <fullName>CPQL__c</fullName>
    <formula>IF(Total_Qualified_Enquiries__c &lt;&gt; 0,( Actual_Budget_Spent_Total_Spends__c   /  Total_Qualified_Enquiries__c),0)</formula>
    <label>CPQL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>