dynamix/force-app/main/default/objects/Campaign/fields/CPW__c.field-meta.xml
<CustomField>
    <fullName>CPW__c</fullName>
    <formula>IF(Total_Walk_ins__c &lt;&gt; 0, ( Actual_Budget_Spent_Total_Spends__c  /  Total_Walk_ins__c), 0)</formula>
    <label>CPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>