dynamix/force-app/main/default/objects/Campaign/fields/Message_for_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_for_End_Date__c</fullName>
    <formula>IF( EndDate  ==   Prior_End_Date__c , 
 TEXT(EndDate), 
 &apos;End Date has been Updated from &apos; + TEXT(Prior_End_Date__c) + &apos; to &apos; + TEXT(EndDate)
)</formula>
    <label>Message for End Date</label>
    <type>Text</type>
</CustomField>