dynamix/force-app/main/default/objects/Campaign/fields/Message_for_Planned_Budget__c.field-meta.xml
<CustomField>
    <fullName>Message_for_Planned_Budget__c</fullName>
    <formula>IF( ActualCost== Prior_Planned_Budget__c  ,&apos;INR. &apos;+text(ActualCost),
 &apos;Planned Budget has been Updated from INR. &apos; + TEXT(Prior_Planned_Budget__c) + &apos; to INR. &apos; + TEXT(ActualCost)
)</formula>
    <label>Message for Planned Budget</label>
    <type>Text</type>
</CustomField>