dynamix/force-app/main/default/objects/Campaign/fields/Message_for_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_for_Start_Date__c</fullName>
    <formula>IF(StartDate == Prior_Start_Date__c ,
  text (StartDate),
 &apos;Start Date has been Updated from &apos; + TEXT(Prior_Start_Date__c ) + &apos; to &apos; + TEXT(StartDate )
)</formula>
    <label>Message for Start Date</label>
    <type>Text</type>
</CustomField>