dynamix/force-app/main/default/objects/Campaign/fields/Prior_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_End_Date__c</fullName>
    <label>Prior End Date</label>
    <type>Date</type>
</CustomField>