dynamix/force-app/main/default/objects/Campaign/fields/Prior_Planned_Budget__c.field-meta.xml
<CustomField>
    <fullName>Prior_Planned_Budget__c</fullName>
    <label>Prior Planned Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>