dynamix/force-app/main/default/objects/Campaign/fields/Prior_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Start_Date__c</fullName>
    <label>Prior Start Date</label>
    <type>Date</type>
</CustomField>