dynamix/force-app/main/default/objects/Campaign/fields/Qualified_Enquiries_to_Walk_in_ratio__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Enquiries_to_Walk_in_ratio__c</fullName>
    <formula>IF(Total_Qualified_Enquiries__c &lt;&gt; 0, (Total_Walk_ins__c/Total_Qualified_Enquiries__c) , 0)</formula>
    <label>Qualified Enquiries to Walk-in ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>