dynamix/force-app/main/default/objects/Campaign/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Shows the Reason for Rejection by Promoter</description>
    <label>Rejection Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>