dynamix/force-app/main/default/objects/Campaign/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Housing.com</fullName>
            </value>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>Magic Bricks</fullName>
            </value>
            <value>
                <fullName>Common Floor</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Taboola</fullName>
            </value>
            <value>
                <fullName>Magicbrics</fullName>
            </value>
            <value>
                <fullName>99Acre</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Site Branding</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>Bus Shelter</fullName>
            </value>
            <value>
                <fullName>IVR Call</fullName>
            </value>
            <value>
                <fullName>Exhibition/Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>