dynamix/force-app/main/default/objects/Campaign/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub-Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook Paid</fullName>
            </value>
            <value>
                <fullName>Facebook Organic</fullName>
            </value>
            <value>
                <fullName>Instagram Paid</fullName>
            </value>
            <value>
                <fullName>Instagram Organic</fullName>
            </value>
            <value>
                <fullName>Hoarding Ad A</fullName>
            </value>
            <value>
                <fullName>Hoarding Ad B</fullName>
            </value>
            <value>
                <fullName>TOI</fullName>
            </value>
            <value>
                <fullName>The Hindu</fullName>
            </value>
            <value>
                <fullName>Mint</fullName>
            </value>
            <value>
                <fullName>Leadgen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>