dynamix/force-app/main/default/objects/Campaign/fields/Sum_of_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Agreement_Value__c</fullName>
    <label>Sum of  Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>