dynamix/force-app/main/default/objects/Campaign/fields/Total_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Total_Enquiries__c</fullName>
    <label>Total Enquiries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>