dynamix/force-app/main/default/objects/Campaign/fields/Total_Walk_ins__c.field-meta.xml
<CustomField>
    <fullName>Total_Walk_ins__c</fullName>
    <label>Total Walk-ins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>