dynamix/force-app/main/default/objects/Campaign/fields/Virtual_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Phone_Number__c</fullName>
    <label>Virtual Phone Number</label>
    <type>Phone</type>
</CustomField>