dynamix/force-app/main/default/objects/Campaign/validationRules/Campaign_should_Be_Approved_To_be_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_should_Be_Approved_To_be_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Approval_Status__c , &quot;Approved&quot;)),  IsActive = true)</errorConditionFormula>
    <errorMessage>This Campaign cannot yet be marked as Active, because it has not been approved by the Promoter.</errorMessage>
</ValidationRule>