dynamix/force-app/main/default/objects/Campaign/validationRules/Cannot_Enter_Spends_if_New_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Enter_Spends_if_New_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() , NOT(ISNULL( Actual_Budget_Spent_Total_Spends__c )) )</errorConditionFormula>
    <errorDisplayField>Actual_Budget_Spent_Total_Spends__c</errorDisplayField>
    <errorMessage>As this is a new record, you cannot enter the value of spends!!</errorMessage>
</ValidationRule>