dynamix/force-app/main/default/objects/Campaign/validationRules/In_Progress_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  TEXT( Status ) ==&apos;In Progress&apos;, StartDate &gt;  TODAY() )</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You cannot move to campaign In Progress.</errorMessage>
</ValidationRule>