dynamix/force-app/main/default/objects/Campaign/validationRules/No_Name_Changes_if_Campaign_is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Name_Changes_if_Campaign_is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>IF( IsActive &amp;&amp; ISCHANGED(  Name ) , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Campaign Name Cannot be Changed for an active Campaign.</errorMessage>
</ValidationRule>