dynamix/force-app/main/default/objects/Campaign/validationRules/No_Project_Changes_if_Campaign_is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Project_Changes_if_Campaign_is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>IF( IsActive &amp;&amp; ISCHANGED(  Project__c ) , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Project__c</errorDisplayField>
    <errorMessage>Project cannot be changed for an active Campaign.</errorMessage>
</ValidationRule>