dynamix/force-app/main/default/objects/Campaign/validationRules/No_Source_Changes_if_Campaign_is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Source_Changes_if_Campaign_is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>IF( IsActive  &amp;&amp;  ISCHANGED( Source__c ) , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Source__c</errorDisplayField>
    <errorMessage>Source Cannot be updated for an active Campaign.</errorMessage>
</ValidationRule>