dynamix/force-app/main/default/objects/Campaign/validationRules/No_SubSource_Change_if_CampaignIsActive.validationRule-meta.xml
<ValidationRule>
    <fullName>No_SubSource_Change_if_CampaignIsActive</fullName>
    <active>true</active>
    <errorConditionFormula>IF( IsActive  &amp;&amp;  ISCHANGED(  Sub_Source__c ) , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Sub_Source__c</errorDisplayField>
    <errorMessage>Sub-Source Cannot be updated for an active Campaign.</errorMessage>
</ValidationRule>