dynamix/force-app/main/default/objects/Campaign/validationRules/Start_Can_only_be_today_or_greater.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Can_only_be_today_or_greater</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 ISNEW() &amp;&amp; StartDate &lt; TODAY (),
ISCHANGED(StartDate) &amp;&amp; StartDate &lt; TODAY () )</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Start Date Cannot be of Past Date</errorMessage>
</ValidationRule>